adjusted the views & update to cart function

--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -11,3 +11,12 @@
 .quantity{
     display: inline-block;
 }
+
+
+/* buttons */
+#addition{
+    background-color:  #8bca84!important;
+}
+#subtraction{
+    background-color: #5bb450!important;
+}
