--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -3,6 +3,9 @@
 {% block title %}Obaya Online | Cart{% endblock title %}
 
 {% block content %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/cart.css' %}">
+
+
     <div class="row my-1">
         <div class="col-lg-12">
 
@@ -47,15 +50,11 @@
                         <div style='flex:1' >
                             <p class='quantity' style='margin-left:10px;'>{{item.quantity}}</p>
                             <div class="quantity">
-                                {% comment %} <img class='change-quantity' src="{% static 'images/minus.png' %}" alt="" style='height: 30px;
-                                width: 15px;'>
-                                <img class='change-quantity'  src="{% static 'images/plus.png' %}" alt="" style='height: 10px;
-                                width: 10px;'d> {% endcomment %}
+
 
                                 <div id="cart-card">
-                                    <button>-</button>
-                                    <button 'btn update-cart  btn-sm bg-danger text-light' value={{item.product.id}}>+</button>
-                                    <input type="number" name="quantity" value="1" class="vIntegerField" id="id_quantity">
+                                    <button id='addition' class='btn update-cart  btn-sm  text-light'>&#8211;</button>
+                                    <button id='subtraction' class='btn update-cart btn-sm  text-light'>&#43;    </button>
                                 </div>
                             </div>
 
