--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -81,9 +81,19 @@
       </nav>
 
     <div class="container">
-        {% block content %}
+      {% if messages %}
+         {% for message in message %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            
+              <strong>{{message}}</strong> 
+            
+            <button type="button" class="btn-close btn-sm" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>      
+        {% endfor %}   
+    {% endif %}
+      {% block content %}
         
-        {% endblock content %}
+      {% endblock content %}
     </div>
 
 
