--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -72,13 +72,14 @@
                 </small></a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex" method="GET" action="{% url 'store' %}">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
+            
           </div>
         </div>
-      </nav>
+    </nav>
 
     <div class="container">
       {% if messages %}
