--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -58,9 +58,9 @@
                 </a>
                 
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Login</a></li>
+                  <li><a class="dropdown-item" href="login">Login</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Register</a></li>
+                  <li><a class="dropdown-item" href="register">Register</a></li>
                 </ul>
                 {% endif %}
               </li>
