--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -55,11 +55,10 @@
                             </form>
                         </div>
                         <div class="box-element" id='payment-info'>
-                            <button type="button" onclick="makePayment()" class='btn btn-lg bg-success text-light'>Pay Now</button>
+                            <button type="button" onclick="makePayment()">Pay Now</button>
             
-                        </div>
-
-                      
+                        </div> 
+                          
                     </div>
                 </div>
 
@@ -93,10 +92,6 @@
                         </div>
                     </div>
                 </div>
-
-
-                
-          
 
         </div>
     </div>
@@ -142,41 +137,44 @@
 </script> {% endcomment %}
 
 <script src="https://checkout.flutterwave.com/v3.js"></script>
+
 <script>
+    let cart_total = '{{order.get_cart_total}}'
+    let cart_id = '{{order.transaction_id}}'
+    let customer_id = '{{customer_id}}';
+    let customer_name = '{{customer_name}}';
+    let customer_email = '{{customer_email}}';
+    let logoUrl = '/static/images/Orange_and_Gray_Tag_Cart_Virtual_Shop_Logo-removebg-preview.png';
 
-
-let cart_total = '{{order.get_cart_total}}'
-let cart_id = '{{order.transaction_id}}'
-let customer_id = '{{customer_id}}';
-let customer_email = '{{customer_email}}';
-let logoUrl = '/static/images/Orange_and_Gray_Tag_Cart_Virtual_Shop_Logo-removebg-preview.png';
-
-
-  function makePayment() {
-    FlutterwaveCheckout({
-      public_key: "FLWPUBK_TEST-c4be858d739f16100797d96169b98e0f-X",
-      tx_ref: cart_id,
-      amount: cart_total,
-      currency: "USD",
-      payment_options: "card, mobilemoneyghana, ussd",
-      redirect_url: "http://127.0.0.1:8000/confirm_payment/"+cart_id,
-      meta: {
-        consumer_id: customer_id,
-        consumer_mac: "92a3-912ba-1192a",
-      },
-      customer: {
-        email: customer_email,
-        name: "{{request.user.username}}",
-      },
-      customizations: {
-        title: "My Shop",
-        description: "Buy with ease",
-        logo: "https://www.logolynx.com/images/logolynx/22/2239ca38f5505fbfce7e55bbc0604386.jpeg",
-      },
-    });
-  }
+    function makePayment() {
+        FlutterwaveCheckout({
+          public_key: "FLWPUBK_TEST-SANDBOXDEMOKEY-X",
+          tx_ref: cart_id,
+          amount: cart_total,
+          currency: "NGN",
+          payment_options: "card, mobilemoneyghana, ussd",
+          redirect_url: "127.0.0.1:8000/confirm_payment/"+cart_id,
+          meta: {
+            consumer_id: customer_id,
+            consumer_mac: "92a3-912ba-1192a",
+          },
+          customer: {
+            email: customer_email,
+            name: customer_name,
+          },
+          customizations: {
+            title: "Obaya Onlne",
+            description: "Shopping at its finest",
+            logo: logoUrl,
+          },
+        });
+      }
 
 </script>
+
+
+
+
 
 
 {% endblock content %}
