--- a/store/templates/registration/profile.html
+++ b/store/templates/registration/profile.html
@@ -2,4 +2,21 @@
 {% block title %}Obaya Online | Profile{% endblock title %}
 
 {% block content %}
+    <div>
+        <h1>Profile</h1>
+  {% if customer %}
+    <p>Name: {{ customer.user }}</p>
+    <p>Email: {{ customer.user.email }}</p>
+    {% if customer.address %}
+      <p>Shipping Address:</p>
+      <p>{{ customer.address.address }}</p>
+      <p>{{ customer.address.city }}, {{ customer.address.state }} {{ customer.address.zipcode }}</p>
+    {% else %}
+      <p>No shipping address on file.</p>
+    {% endif %}
+  {% else %}
+    <p>You are not logged in.</p>
+  {% endif %}
+    </div>
+
 {% endblock content %}
