--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -43,22 +43,23 @@
               </li>
               <li class="nav-item dropdown">
                 {% if user.is_authenticated%}
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  {{user.username}}
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Profile</a></li>
-                  <li><a class="dropdown-item" href="#">Settings</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
-                </ul>
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    {{user.username}}
+                  </a>
+                  <ul class="dropdown-menu">
+                    
+                    <li><a class="dropdown-item" href="{% url 'profile' user.customer.pk %}">Profile</a></li>
+                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                  </ul>
                 {% else %}
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Guest
                 </a>
                 
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="login">Login</a></li>
+                  <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="register">Register</a></li>
                 </ul>
@@ -111,3 +112,8 @@
 
 </body>
 </html>
+
+
+
+
+
