--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -35,22 +35,14 @@
         
                                 <div class="shipping-info">
                                     
-                                    <div class="mb-3">
-                                        <label for="address">Address</label>
-                                        <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
-                                        <div class="invalid-feedback">
-                                        Please enter your shipping address.
-                                        </div>
-                                    </div>
-                        
-                                    <div class="mb-3">
-                                        <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-                                        <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-                                    </div>
+                                    <select name="billing_address" class="form-select" required>
+                                        {% for address in customer.customer.shipping_address.all %}
+                                            <option value="{{ address.id }}" {% if address == customer.customer.address %}selected{% endif %}>{{ address.address }}</option>
+                                        {% endfor %}
+                                    </select>
                         
         
                                 </div>
-                          
         
                             </form>
                         </div>
