--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -8,9 +8,9 @@
   {% for product in products%}
     <div class="col-lg-4" id='cart-card'>
         <div class="card my-1" style="width: 18rem;">
-            <img src="{{product.imageURL}} " class="card-img-top" alt="...">
+            <a href="{% url 'products' product.pk %}"><img src="{{product.imageURL}} " class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <div class="card-text"><h6>{{product.name}} - <span class=' fw-lighter'>${{product.price}}</span></h6>
+              <div class="card-text"><a href="{% url 'products' product.pk %}"><h6>{{product.name}} - <span class=' fw-lighter'>${{product.price}}</span></h6></a>
                 <hr>
                   <button class='btn update-cart  btn-sm bg-danger text-light' value={{product.id}}>Add to Cart</button> 
 
@@ -25,27 +25,4 @@
   {% endfor %}
 </div>
 
-{% comment %} <div class="row">
-  {% for product in products %}
-    <div class="col-lg-4" id='cart-card'>
-        <div class="card my-1" style="width: 18rem;">
-            <img src="{{product.imageURL}}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <div class="card-text">
-                <h6>{{product.name}} - <span class='fw-lighter'>${{product.price}}</span></h6>
-                <hr>
-                <div class="quantity">
-                  <div id="cart-card" data-product-id="{{ product.id }}">
-                    <button id="subtraction" class="btn update-cart btn-sm bg-danger text-light">-</button>
-                    <p class="quantity" style="margin-left: 10px;" id="quantity-{{ product.id }}">{{ product.quantity }}</p>
-                    <button id="addition" class="btn update-cart btn-sm bg-danger text-light">+</button>
-                  </div>
-                </div>
-                <button class="btn update-cart btn-sm bg-danger text-light" value="{{ product.id }}">Add to Cart</button>
-              </div>
-            </div>
-        </div>
-    </div>
-  {% endfor %}
-</div> {% endcomment %}
 {% endblock content %}
