--- a/store/templates/customer/order_detail.html
+++ b/store/templates/customer/order_detail.html
@@ -27,7 +27,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for item in order_items|Reversed %}
+                    {% for item in order_items%}
                         <tr>
                             <td>{{ item.product }}</td>
                             <td>{{ item.quantity }}</td>
