--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -90,16 +90,18 @@
     </nav>
 
     <div class='container'>
-      {% if messages %}
-         {% for message in message %}
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            
-              <strong>{{message}}</strong> 
-            
-            <button type="button" class="btn-close btn-sm" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>      
-        {% endfor %}   
-    {% endif %}
+        <div id='messages'>
+            {% if messages %}
+              {% for message in messages %}
+                <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+                
+                  <strong>{{message}}</strong> 
+                
+                <button type="button" class="btn-close btn-sm" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>      
+              {% endfor %}   
+            {% endif %}
+        </div>
       {% block content %}
         
       {% endblock content %}
