--- a/store/templates/registration/register.html
+++ b/store/templates/registration/register.html
@@ -4,20 +4,22 @@
 {% block content %}
 
     
-    <div class="form-group">
-        <h3>Kindly enter your details</h3>
-        <form action="" method='POST'>
-
-            {% csrf_token %}
-            {{form.as_p}}
-            <ul>
-                <li>Your password can’t be too similar to your other personal information.</li>
-                <li>Your password must contain at least 8 characters.</li>
-                <li>Your password can’t be a commonly used password.</li>
-                <li>Your password can’t be entirely numeric.</li>
-            </ul>
-            <button class = 'btn btn-secondary'>Register</button>
-        </form>
+    <div class="form-control-group">
+        <div class="form-group">
+            <h3>Kindly enter your details</h3>
+            <form action="" method='POST'class='form-control'>
+    
+                {% csrf_token %}
+                {{form.as_p}}
+                <ul>
+                    <li>Your password can’t be too similar to your other personal information.</li>
+                    <li>Your password must contain at least 8 characters.</li>
+                    <li>Your password can’t be a commonly used password.</li>
+                    <li>Your password can’t be entirely numeric.</li>
+                </ul>
+                <button class = 'btn btn-secondary'>Register</button>
+            </form>
+        </div>
     </div>
 
 {% endblock content %}
