--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -6,6 +6,21 @@
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/store.css' %}">
 
+<div>
+  <div class=' mx-4 my-2'>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Sort Items
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="?sort=price">Sort by price (low to high)</a></li>
+        <li><a class="dropdown-item" href="?sort=-price">Sort by price (high to low)</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+    
+  </div>
+</div>
 <div class="row">
   <div class="col">
     {% for product in products%}
