sort - newest added

--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -15,7 +15,7 @@
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="?sort=price">Sort by price (low to high)</a></li>
         <li><a class="dropdown-item" href="?sort=-price">Sort by price (high to low)</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <li><a class="dropdown-item" href="?sort=date_added">Newest</a></li>
       </ul>
     </div>
     
