--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -15,35 +15,23 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="box-element" id='form-wrapper'>
-                            <form action="" id="form">
-                                {% comment %} <div class="user-info">
-                                    <label for="firstName">First name</label>
-                                    <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                                    <label for="lastName">Last name</label>
-                                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-        
-        
-        
-                                    <label for="email">Email <span class="text-muted">(Optional)</span></label>
-                                    <input type="email" class="form-control" id="email" placeholder="you@example.com">
-        
-                                </div> {% endcomment %}
                             
-        
-        
-        
-                                <div class="shipping-info">
-                                    
-                                    <select name="billing_address" class="form-select" required>
-                                        {% for address in customer_addresses %}
-                                            <option value="{{ address.id }}" {% if address == customer_address %}selected{% endif %}>{{ address.address }}</option>
-                                        {% endfor %}
-                                    </select>
-        
-                                </div>
-        
-                            </form>
+                                    <div class="shipping-info">
+                                        <form method="POST">
+                                            {% csrf_token %}
+                                            <select name="billing_address" class="form-select" required>
+                                                {% for address in customer_addresses %}
+                                                    <option value="{{ address.id }}" {% if order.billing_address == address %}selected{% endif %}>{{ address.address }}</option>
+                                                {% endfor %}
+                                            </select>
+                                            <button type="submit" class="btn btn-primary">Save</button>
+                                        </form>
+                                    </div>
+                                                            
                         </div>
+                        
+
+
                         <div class="box-element" id='payment-info'>
                             <button type="button" onclick="makePayment()">Pay Now</button>
             
@@ -91,10 +79,9 @@
 
 
 <script src="https://checkout.flutterwave.com/v3.js"></script>
-
 <script>
-    let cart_total = '{{order.get_cart_total}}'
-    let cart_id = '{{order.transaction_id}}'
+    let cart_total = '{{order.get_cart_total|floatformat:"2"}}';
+    let cart_id = '{{order.transaction_id}}';
     let customer_id = '{{customer_id}}';
     let customer_name = '{{customer_name}}';
     let customer_email = '{{customer_email}}';
@@ -107,13 +94,15 @@
           amount: cart_total,
           currency: "USD",
           payment_options: "card, mobilemoneyghana, ussd",
-          redirect_url: "127.0.0.1:8000/confirm_payment/"+cart_id,
+          redirect_url: "http://127.0.0.1:8000/confirm_payment/"+cart_id,
+
           meta: {
             consumer_id: customer_id,
             consumer_mac: "92a3-912ba-1192a",
           },
           customer: {
             email: customer_email,
+            phone_number: "08102909304",
             name: customer_name,
           },
           customizations: {
