added increase and decrease cart item function

--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -48,11 +48,13 @@
                         <div style='flex:2' >{{item.product.name}}</div>
                         <div style='flex:1' >{{item.product.price}}</div>
                         <div style='flex:1' class="quantity">
-                            <div id="cart-card-{{ item.id }}">
-                              <button class="btn update-cart" data-action="subtraction" data-item-id="{{ item.id }}">-</button>
-                              <span id="quantity-{{ item.id }}" class="quantity-value">{{ item.quantity }}</span>
-                              <button class="btn update-cart" data-action="addition" data-item-id="{{ item.id }}">+</button>
-                            </div>
+                            <form class="update-cart-form" method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="product_id" value="{{ item.product.id }}">
+                                <button class="btn update-cart" type="submit" name="action" value="subtract">-</button>
+                                <span id="quantity-{{ item.product.id }}" class="quantity-value">{{ item.quantity }}</span>
+                                <button class="btn update-cart" type="submit" name="action" value="add">+</button>
+                            </form>
                             <div style='flex:1' >
                                 <form action="{% url 'cart-item-delete' item.id %}" method="POST" style='margin-left: 15px;'>
                                     {% csrf_token %}
