--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -27,6 +27,8 @@
                                             <button type="submit" class="btn btn-primary">Save</button>
                                         </form>
                                     </div>
+                                    <a href="{% url 'add_address'  %}" style='margin-bottom:20px;'>Add a billing address</a>
+
                                                             
                         </div>
                         
